# task-manager

amplify/: team-provider-info.json
amplify/.config/: project-config.json
amplify/backend/: backend-config.json
coffee-history/: package-lock.json  package.json  pyproject.toml
coffee-history/amplify/: team-provider-info.json
coffee-history/amplify/.config/: project-config.json
coffee-history/amplify/backend/: backend-config.json
coffee-history/amplify/backend/api/CoffeeHistory/: cli-inputs.json  parameters.json  schema.graphql
coffee-history/amplify/backend/auth/CoffeeHistory/: cli-inputs.json
coffee-history/amplify/backend/function/S3Triggere23fa3ab/: S3Triggere23fa3ab-cloudformation-template.json
coffee-history/amplify/backend/function/S3Triggere23fa3ab/src/: package-lock.json  package.json
coffee-history/amplify/backend/function/processImage/: custom-policies.json  function-parameters.json  processImage-cloudformation-template.json
coffee-history/amplify/backend/function/processImage/src/: event.json  index.py
coffee-history/amplify/backend/storage/userMedia/: cli-inputs.json
coffee-history/amplify/backend/types/: amplify-dependent-resources-ref.d.ts
coffee-history/src/: App.js  Home.js
coffee-history/src/models/: index.d.ts  index.js  schema.js
coffee-history/src/ui-components/: CoffeeEntry.d.ts  CoffeeEntry.jsx  CoffeeList.d.ts  CoffeeList.jsx  NavBar.jsx  SearchBar.d.ts  SearchBar.jsx  index.js
src/models/: index.d.ts  index.js
src/ui-components/: MyComponent.jsx  MyNavBar.d.ts  (+3 more)
task-manager/: package-lock.json  package.json
(+15 files in other folders)
