[tool.poetry]
name = "coffee-history"
version = "0.1.0"
description = ""
authors = ["Victor <victorde.ac@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
boto3 = "^1.24.74"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
